fix up alignment for account checkbox

--- a/pkg/base1/cockpit.css
+++ b/pkg/base1/cockpit.css
@@ -155,10 +155,6 @@ a {
     padding: 20px 0 10px 0;
 }
 
-.cockpit-form-table input[type='checkbox'] {
-    margin: 8px;
-}
-
 .cockpit-form-table label input[type='checkbox'] {
     margin-right: 4px;
 }
@@ -172,7 +168,6 @@ a {
 }
 
 .cockpit-form-table label span {
-    color: #888;
     vertical-align: super;
 }
 
